Fix deploys, tweak header spacing

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ $tag-color:            white;
 $tag-background-color: #1c1e22;
 
 body {
-  margin-top: 100px; /* 100px is double the height of the navbar - I made it a big larger for some more space - keep it at 50px at least if you want to use the fixed top nav */
+  margin-top: 70px; /* 100px is double the height of the navbar - I made it a big larger for some more space - keep it at 50px at least if you want to use the fixed top nav */
 }
 
 footer {
